--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,29 +1,25 @@
 services:
   web:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ..
+      dockerfile: docker/Dockerfile
     container_name: safi_dev
     restart: always
-
     command: flask run --host=0.0.0.0 --port=5000
-
     ports:
       - "5000:5000"
     environment:
       - FLASK_APP=run.py
       - FLASK_DEBUG=1
-
     volumes:
-      - .:/app
+      - ..:/app
 
   test_runner:
     build:
-      context: .
-      dockerfile: Dockerfile
-
+      context: ..
+      dockerfile: docker/Dockerfile
     command: pytest
     volumes:
-      - .:/app
+      - ..:/app
     environment:
       - FLASK_DEBUG=1
